updated VMware links

--- a/morea/01.unix/install-mac.html
+++ b/morea/01.unix/install-mac.html
@@ -65,6 +65,7 @@
   </li>
   <li>Get the latest version of python 3 <a href="https://www.python.org/downloads/">https://www.python.org/downloads/</a></li>
   <li>TextWrangler editor: <a href="http://www.barebones.com/products/textwrangler/download.html">http://www.barebones.com/products/textwrangler/download.html</a></li>
+  <li>Next step is to <a href="/150/morea/01.unix/unix-custom.html">customize the terminal</a></li>
 </ol>
 
 </div>
@@ -80,7 +81,7 @@
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-08-28 13:42:18 -0400</span></p>
+       Last update on: <span>2015-08-31 13:28:20 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
