--- a/morea/01.unix/install-windows.html
+++ b/morea/01.unix/install-windows.html
@@ -59,7 +59,12 @@
 <p>I have already setup a UNIX installation for you, but to use it, you need to set it up in Virtual Box.</p>
 
 <ol>
-  <li>Download and install <a href="https://www.virtualbox.org/">VirtualBox</a> on your computer</li>
+  <li>Download and install <a href="https://www.virtualbox.org/">VirtualBox</a> on your computer
+    <ul>
+      <li><strong>Windows 10 users:</strong> if VirtualBox doesn’t run, try downloading &amp; installing <a href="https://www.vmware.com/products/player/playerpro-evaluation.html">VMware player</a> instead. See me during office hours for help.</li>
+      <li><strong>Windows 7 users:</strong> if you get a <code>VT-X error</code>, you can either turn on virtualization through BIOS (see me outside of class) <strong><em>OR</em></strong> install a <a href="http://releases.ubuntu.com/14.04.3/ubuntu-14.04.3-desktop-i386.iso">32-bit version of ubuntu</a>. See me during office hours for help.</li>
+    </ul>
+  </li>
   <li>Download the <a href="http://cs.drew.edu/~emhill/117/CSCI-117.ova">VM image</a> (~2GB). If you encounter problems unzipping the VM (default unzip software may not be sufficient on older operating systems), 7zip is a free unzip program.</li>
   <li>Install, run, shutdown, &amp; customize your VM.</li>
 </ol>
@@ -171,7 +176,7 @@ This will allow you to copy/paste between your host computer and the virtual mac
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-08-28 13:42:18 -0400</span></p>
+       Last update on: <span>2015-08-31 13:28:20 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
