--- a/morea/01.unix/install-windows.html
+++ b/morea/01.unix/install-windows.html
@@ -61,8 +61,8 @@
 <ol>
   <li>Download and install <a href="https://www.virtualbox.org/">VirtualBox</a> on your computer
     <ul>
-      <li><strong>Windows 10 users:</strong> if VirtualBox doesn’t run, try downloading &amp; installing <a href="https://www.vmware.com/products/player/playerpro-evaluation.html">VMware player</a> instead. See me during office hours for help.</li>
-      <li><strong>Windows 7 users:</strong> if you get a <code>VT-X error</code>, you can either turn on virtualization through BIOS <strong><em>OR</em></strong> install a <a href="http://releases.ubuntu.com/14.04.3/ubuntu-14.04.3-desktop-i386.iso">32-bit version of ubuntu</a> in your VirtualBox. See me during office hours for help.</li>
+      <li>If VirtualBox doesn’t work, try downloading &amp; installing <a href="https://www.vmware.com/products/player/playerpro-evaluation.html">VMware player</a> instead. See me during office hours for help.</li>
+      <li>If you get a <code>VT-X error</code>, you can either turn on virtualization through BIOS <strong><em>OR</em></strong> install a <a href="http://releases.ubuntu.com/14.04.3/ubuntu-14.04.3-desktop-i386.iso">32-bit version of ubuntu</a> in your VirtualBox. See me during office hours for help.</li>
     </ul>
   </li>
   <li>Download the <a href="http://cs.drew.edu/~emhill/117/CSCI-117.ova">VM image</a> (~2GB). If you encounter problems unzipping the VM (default unzip software may not be sufficient on older operating systems), 7zip is a free unzip program.</li>
@@ -87,7 +87,7 @@
       <li>Once imported, you should see the CSCI-117 virtual machine powered off:<br />
   <a href="VBMgr-full.png"><img src="VBMgr-sm.png" width="300" /></a></li>
       <li>Hit the green arrow labeled <code>Start</code> the UNIX machine.</li>
-      <li>Once the UNIX VM has loaded, go to <code>Devices &gt; Insert Guest Additions CD image</code></li>
+      <li>Once the UNIX VM has loaded, go to <code>Devices &gt; Insert Guest Additions CD image</code>. On VMware Player, this would be <code>Player &gt; Manage &gt; Install VMware Tools</code>.</li>
       <li>You may need to enter the user name and/or password for this machine:</li>
       <li><strong>user</strong>: csci</li>
       <li><strong>password</strong>: 117</li>
@@ -176,7 +176,7 @@ This will allow you to copy/paste between your host computer and the virtual mac
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-08-31 13:29:22 -0400</span></p>
+       Last update on: <span>2015-09-02 13:17:30 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
