--- a/morea/01.unix/phw1.html
+++ b/morea/01.unix/phw1.html
@@ -116,7 +116,7 @@
   <li>Once you’re satisfied that your program is working correctly, zip it for submission:
     <ul>
       <li><code>cd ..</code></li>
-      <li><code>zip hw2_uLogin.zip hw2_uLogin/*</code></li>
+      <li><code>zip phw1_uLogin.zip phw1_uLogin/*</code></li>
     </ul>
   </li>
 </ol>
@@ -204,7 +204,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-08-31 13:29:22 -0400</span></p>
+       Last update on: <span>2015-09-02 13:17:30 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
