hw2 google classroom

--- a/morea/02.python/hw2.html
+++ b/morea/02.python/hw2.html
@@ -57,7 +57,7 @@
   <h2 id="code-academy-sign-up">Code Academy Sign Up</h2>
 
 <p>Throughout the semester we will be exploring new concepts through Code Academy.
-Visit <a href="http://www.codecademy.com/en/tracks/python">codecademy.com</a> and create an account. Then go to view my profile. Post this URL to moodle to submit your assignment.</p>
+Visit <a href="http://www.codecademy.com/en/tracks/python">codecademy.com</a> and create an account. Then go to view my profile. Post this URL to Google Classroom to submit your assignment. You only need to submit this for the <em>first</em> assignment.</p>
 
 <p><em>Make sure you have completed <strong>both</strong> the Python Syntax &amp; Tip Calculator exercises before the due date.</em></p>
 
@@ -74,7 +74,7 @@ Visit <a href="http://www.codecademy.com/en/tracks/python">codecademy.com</a> an
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-09-02 13:17:30 -0400</span></p>
+       Last update on: <span>2015-09-04 13:42:42 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
