--- a/morea/02.python/phw2.html
+++ b/morea/02.python/phw2.html
@@ -211,36 +211,38 @@
 
 <!-- Allow 45 minutes for all? -->
 
-<!--## Demonstration
+<h2 id="demonstration">Demonstration</h2>
 
-Once you've finished doing the HW a single time, you can watch me do it:
+<p>Once you’ve finished doing the HW a single time, you can watch me do it:</p>
 
 <div class="video-container">
-  <iframe  src="http://www.youtube.com/embed/NGK61X9ry9c" frameborder="0" allowfullscreen></iframe>
+  <iframe src="http://www.youtube.com/embed/NGK61X9ry9c" frameborder="0" allowfullscreen=""></iframe>
 </div>
 
-## Standard Practice HW Caveats
+<h2 id="standard-practice-hw-caveats">Standard Practice HW Caveats</h2>
 
-You’ll learn significantly less from watching me solve the
-HW if you haven’t attempted the HW yourself first.
+<p>You’ll learn significantly less from watching me solve the
+HW if you haven’t attempted the HW yourself first.</p>
 
-While it's an achievement to finish the HW no matter how long it takes, you
-might experience "diminishing returns" if you work longer than the DNF (Did Not Finish)
+<p>While it’s an achievement to finish the HW no matter how long it takes, you
+might experience “diminishing returns” if you work longer than the DNF (Did Not Finish)
 time. Thus, it might be strategic to stop working at the DNF time and watch
-my solution.
+my solution.</p>
 
-After watching my solution, I recommend that you repeat the HW if you
-have not achieved at least Av (Average) performance. If so, be sure to:
+<p>After watching my solution, I recommend that you repeat the HW if you
+have not achieved at least Av (Average) performance. If so, be sure to:</p>
 
-  * Delete your old project so you cannot refer to it;
-  * Don’t look at my screencast while you HW; and
-  * Reset your timer.
+<ul>
+  <li>Delete your old project so you cannot refer to it;</li>
+  <li>Don’t look at my screencast while you HW; and</li>
+  <li>Reset your timer.</li>
+</ul>
 
-Feel free to keep trying until you make Rx if that’s of interest to you.
+<p>Feel free to keep trying until you make Rx if that’s of interest to you.</p>
 
-### Solutions to Questions
+<h3 id="solutions-to-questions">Solutions to Questions</h3>
 
-<a href="types.png"><img src="types.png" width="200"/></a>-->
+<p><a href="types.png"><img src="types.png" width="200" /></a></p>
 
 </div>
 
@@ -255,7 +257,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-09-11 13:29:04 -0400</span></p>
+       Last update on: <span>2015-09-13 22:27:16 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
