--- a/morea/01.unix/phw1.html
+++ b/morea/01.unix/phw1.html
@@ -121,38 +121,40 @@
   </li>
 </ol>
 
-<!--## Demonstration
+<h2 id="demonstration">Demonstration</h2>
 
-Once you've finished doing the HW a single time, you can watch me do it:
+<p>Once you’ve finished doing the HW a single time, you can watch me do it:</p>
 
 <div class="video-container">
-  <iframe  src="http://www.youtube.com/embed/bMbr3Xpbgzk" frameborder="0" allowfullscreen></iframe>
+  <iframe src="http://www.youtube.com/embed/bMbr3Xpbgzk" frameborder="0" allowfullscreen=""></iframe>
 </div>
 
-## Standard Practice HW Caveats
+<h2 id="standard-practice-hw-caveats">Standard Practice HW Caveats</h2>
 
-You’ll learn significantly less from watching me solve the
-HW if you haven’t attempted the HW yourself first.
+<p>You’ll learn significantly less from watching me solve the
+HW if you haven’t attempted the HW yourself first.</p>
 
-While it's an achievement to finish the HW no matter how long it takes, you
-might experience "diminishing returns" if you work longer than the DNF (Did Not Finish)
+<p>While it’s an achievement to finish the HW no matter how long it takes, you
+might experience “diminishing returns” if you work longer than the DNF (Did Not Finish)
 time. Thus, it might be strategic to stop working at the DNF time and watch
-my solution.
+my solution.</p>
 
-After watching my solution, I recommend that you repeat the HW if you
-have not achieved at least Av (Average) performance. If so, be sure to:
+<p>After watching my solution, I recommend that you repeat the HW if you
+have not achieved at least Av (Average) performance. If so, be sure to:</p>
 
-  * Delete your old project so you cannot refer to it;
-  * Don’t look at my screencast while you HW; and
-  * Reset your timer.
+<ul>
+  <li>Delete your old project so you cannot refer to it;</li>
+  <li>Don’t look at my screencast while you HW; and</li>
+  <li>Reset your timer.</li>
+</ul>
 
-Feel free to keep trying until you make Rx if that’s of interest to you.
+<p>Feel free to keep trying until you make Rx if that’s of interest to you.</p>
 
-### Screenshot of my final UNIX terminal:
+<h3 id="screenshot-of-my-final-unix-terminal">Screenshot of my final UNIX terminal:</h3>
 
-<a href="terminalA.png"><img src="terminalA.png" width="400"/></a><BR>
-<a href="terminalB.png"><img src="terminalB.png" width="400"/></a><BR>
-<a href="terminalC.png"><img src="terminalC.png" width="400"/></a>-->
+<p><a href="terminalA.png"><img src="terminalA.png" width="400" /></a><br />
+<a href="terminalB.png"><img src="terminalB.png" width="400" /></a><br />
+<a href="terminalC.png"><img src="terminalC.png" width="400" /></a></p>
 
 <!--## Demonstration
 
@@ -204,7 +206,7 @@ Feel free to keep trying until you make Rx if that’s of interest to you.-->
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-09-11 13:29:04 -0400</span></p>
+       Last update on: <span>2015-09-13 22:27:16 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
