updated vm instructions

--- a/morea/01.unix/install-windows.html
+++ b/morea/01.unix/install-windows.html
@@ -60,7 +60,7 @@
 
 <ol>
   <li>Download and install <a href="https://www.vmware.com/products/player/playerpro-evaluation.html">VMware player</a> (recommended for Windows) or <a href="https://www.virtualbox.org/">VirtualBox</a> (recommended for Mac) on your computer.</li>
-  <li>Download the <a href="http://cs.drew.edu/~emhill/vm-images/CSCI-150.ova">VM image</a> (~2GB). If you encounter problems unzipping the VM (default unzip software may not be sufficient on older operating systems), 7zip is a free unzip program.</li>
+  <li>Download the <a href="http://cs.drew.edu/~emhill/vm-images/CSCI-150.ova">VM image file <code>CSCI-150.ova</code></a> (~2GB). If you encounter problems unzipping the VM (default unzip software may not be sufficient on older operating systems), 7zip is a free unzip program.</li>
   <li>Install, run, shutdown, &amp; customize your VM (detailed steps below).</li>
 </ol>
 
@@ -171,7 +171,7 @@ This will allow you to copy/paste between your host computer and the virtual mac
 
     
     <p style="margin: 0">Powered by the <a href="http://morea-framework.github.io/">Morea Framework</a> (Theme: spacelab)<br>
-       Last update on: <span>2015-09-24 14:47:15 -0400</span></p>
+       Last update on: <span>2015-09-24 14:52:33 -0400</span></p>
     <p style="margin: 0">
       12 modules
       
